$MirOS: contrib/code/jupp/NEWS,v 1.92 2014/10/23 17:10:44 tg Exp $
------------------------------------------------------------------

JUPP-current

- …
- Update internationalisation data to Unicode 9.0.0
- Bind execmd in jstarrc, so all flavours bind it
- Fix paths in joe(1) manpage

JOE 3.1jupp28

- Document to not quote the argument to -backpath nor append a comment
- Remove unused code, redundant checks
- Replace illegible code with better and more standards-conforming one
- Access fix for the serial line speed array
- Introduce ^KF (jupprc): compile and download NXC program to NXT brick, for
  Freedroidz, a project of Teckids e.V. sponsored by tarent solutions GmbH
- Better const-cleanliness of code
- Quell New File message for scratch buffers
- Fix URI in ChangeLog file
- Actually build with LFS on GNU/Linux

JOE 3.1jupp27

- Update complete internationalisation code and data to Unicode 7.0.0
- Minor fixes to C language syntax highlighting; use it for NXC too
- Fix compilation on SuSE Linux 1.0 (portability)
- Stop trying to match ed(1) diffs for highlighting (false positives)
- Add cp437 encoding

JOE 3.1jupp26

- Syntax files are now both parsed and applied on bytes, not characters;
  matching on Unicode characters is possible using buffer/strings though
- Prevent segfault on ‘`…’ (out-of-bounds keymap array access)
- Fix m{,s}{old,new} operation when opening multiple files from cmdline
- Update “visible spaces” while typing and fix it for nōn-UTF8 files
- jupprc: No longer wordwrap *.{asc,doc,txt} by default
- Add five or six hooks for modification to rc files (Natureshadow’s idea)

JOE 3.1jupp25

- Better colouring of diffs; better support for CVS and git
- New wcwidth code; aligned with Unicode 6.2.0
- Prevent accidentally freeing an environment string
- On SIGWINCH, resize menu to avoid using stale columns information
- msg command with empty argument now clears message buffer
- New "nop" command
- Permit changing keymap for prompt windows